--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,28 @@
 /.project
 *~
-*.aux
-*.glo
-*.idx
-*.log
-*.toc
-*.ist
 *.acn
 *.acr
 *.alg
+*.aux
 *.bbl
 *.blg
 *.dvi
+/*.ent
 *.glg
+*.glo
 *.gls
+*.idx
 *.ilg
 *.ind
+*.ist
 *.lof
+*.log
 *.lot
 *.maf
 *.mtc
 *.mtc1
 *.out
+*.toc
 *.synctex.gz
 *.tex.bak
 /.DS_Store
